--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
   <form class="center" id="login-form">
+    <h1>To-Do List</h1>
     <input type="text" id="username" placeholder="Username">
     <input type="password" id="password" placeholder="Password">
     <input type="submit" value="Login"/>
